<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">



    <ImageView android:id="@+id/imagenLogo"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:src="@drawable/visan"
        android:scaleType="fitCenter"
        android:contentDescription="Visan"
        tools:ignore="HardcodedText,InefficientWeight"
        android:layout_weight="0.44" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="Visan"
        android:textColor="@color/btn_login_bg"
        android:textSize="30sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:width="1dp"

            android:color="@color/border_color"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:inputType="textEmailAddress"
            tools:ignore="Deprecated" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:elevation="0dp"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login"
            tools:ignore="UnusedAttribute" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/bg_register"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="SpUsage" />
    </LinearLayout>

</LinearLayout>